<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNombre"
        android:layout_margin="10px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <DatePicker
        android:id="@+id/Nacimiento"
        android:layout_margin="150px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_below="@id/etNombre"/>

    <EditText
        android:id="@+id/etTelefono"
        android:layout_margin="10px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/phone"
        android:layout_below="@id/Nacimiento"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_margin="10px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType= "textEmailAddress"
        android:hint="@string/mail"
        android:layout_below="@id/etTelefono"/>

    <EditText
        android:id="@+id/etdescription"
        android:layout_margin="10px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_below="@id/etEmail"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnBack"
            android:textColor="@color/btnLetter"
            android:text="@string/next"/>
    </LinearLayout>

</RelativeLayout>